fixed the thumb spacing and fixed restricting being able to empty comment

--- a/css/comments.css
+++ b/css/comments.css
@@ -1,10 +1,13 @@
 .inputTagCss{
 
 }
-
+.row .comments{
+  margin-top: 20px;
+}
 .comments_thump_pic{
 margin-top: 10px;
 margin-left: 20px;
+margin-bottom: 10px;
 }
 
 .resizeNot {
